--- a/public/index.html
+++ b/public/index.html
@@ -13,197 +13,198 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- Home Section -->
-    <section>
-      <div id="home" class="section home">
-        <div id="buttonBar" class="buttonBar">
-          <a href="#home">Home</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="#aboutMe">About Me</a>
-          <a href="#contact">Contact</a>
-          <a href="./img/Resume.pdf" class="resumeButton">Resume</a>
+    <div class="container">
+      <!-- Home Section -->
+      <section>
+        <div id="home" class="section home">
+          <div id="buttonBar" class="buttonBar">
+            <a href="#home">Home</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#aboutMe">About Me</a>
+            <a href="#contact">Contact</a>
+            <a href="./img/Resume.pdf" class="resumeButton">Resume</a>
+          </div>
+          <div class="intro">
+            <h1 class="introHeader">Hey, Im Steve!</h1>
+            <p class="introLine">Started off with Architecture,</p>
+            <p class="introLine">I've decided to do change gears</p>
+            <p class="introLine">and persue web development.</p>
+          </div>
+          <div id="introSvg" class="introSvg">
+            <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
+          </div>
         </div>
-        <div class="intro">
-          <h1 class="introHeader">Hey, Im Steve!</h1>
-          <p class="introLine">Started off with Architecture,</p>
-          <p class="introLine">I've decided to do change gears</p>
-          <p class="introLine">and persue web development.</p>
-        </div>
-        <div id="introSvg" class="introSvg">
-          <img src="./img/Arch Image.svg" class="mainImage" alt="Painting" />
-        </div>
-      </div>
-      <div id="return" class="return">Home</div>
-    </section>
+        <div id="return" class="return">Home</div>
+      </section>
 
-    <!-- Portfolio Section -->
-    <section>
-      <div id="portfolio" class="section portfolio">
-        <h2 class="sectionTitle">My Portfolio</h2>
-        <p class="sectionSubTitle blue">Projects I've Done</p>
-        <div class="projectArea">
-          <div class="projectRow">
-            <div class="project">
-              <div class="projectTitle">E-Commerce Application</div>
-              <div class="projectImage">
-                <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store.">
-                  <img src="./img/ProjectImages/OnlineStoreScreenshot.png" alt="Online Store Screenshot and Link" />
-                </a>
+      <!-- Portfolio Section -->
+      <section>
+        <div id="portfolio" class="section portfolio">
+          <h2 class="sectionTitle">My Portfolio</h2>
+          <p class="sectionSubTitle blue">Projects I've Done</p>
+          <div class="projectArea">
+            <div class="projectRow">
+              <div class="project">
+                <div class="projectTitle">E-Commerce Application</div>
+                <div class="projectImage">
+                  <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store.">
+                    <img src="./img/ProjectImages/OnlineStoreScreenshot.png" alt="Online Store Screenshot and Link" />
+                  </a>
+                </div>
+                <div class="projectLinks">
+                  <a href="https://github.com/JustSteve2k/online-store" aria-label="Link to Github for online store.">
+                    <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                  </a>
+                  <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store."
+                    ><span class="iconify" data-icon="material-symbols:live-tv"></span>
+                  </a>
+                </div>
               </div>
-              <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/online-store" aria-label="Link to Github for online store.">
-                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
-                </a>
-                <a href="https://onlinestore-cb346.web.app" aria-label="Link to live demo for online store."
-                  ><span class="iconify" data-icon="material-symbols:live-tv"></span>
-                </a>
+              <div class="project">
+                <div class="projectTitle">Coloring Book Application</div>
+                <div class="projectImage">
+                  <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
+                    <img src="./img/ProjectImages/ColoringBookScreenshot.png" alt="Coloring Book Screenshot and Link" />
+                  </a>
+                </div>
+                <div class="projectLinks">
+                  <a href="https://github.com/JustSteve2k/ColoringBook" aria-label="Link to Github for coloring book.">
+                    <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                  </a>
+                  <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
+                    <span class="iconify" data-icon="material-symbols:live-tv"></span>
+                  </a>
+                </div>
               </div>
-            </div>
-            <div class="project">
-              <div class="projectTitle">Coloring Book Application</div>
-              <div class="projectImage">
-                <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
-                  <img src="./img/ProjectImages/ColoringBookScreenshot.png" alt="Coloring Book Screenshot and Link" />
-                </a>
-              </div>
-              <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/ColoringBook" aria-label="Link to Github for coloring book.">
-                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
-                </a>
-                <a href="https://coloring-book-26967.web.app/" aria-label="Link to live demo for coloring book.">
-                  <span class="iconify" data-icon="material-symbols:live-tv"></span>
-                </a>
-              </div>
-            </div>
-            <div class="project">
-              <div class="projectTitle">Bidding Application</div>
-              <div class="projectImage">
-                <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
-                  <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" alt="Bid Calculator Screenshot and Link" />
-                </a>
-              </div>
-              <div class="projectLinks">
-                <a href="https://github.com/JustSteve2k/BidCalculator" aria-label="Link to Github for Bid Calculator.">
-                  <span class="iconify" data-icon="radix-icons:github-logo"></span>
-                </a>
-                <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
-                  <span class="iconify" data-icon="material-symbols:live-tv"></span>
-                </a>
+              <div class="project">
+                <div class="projectTitle">Bidding Application</div>
+                <div class="projectImage">
+                  <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
+                    <img src="./img/ProjectImages/BiddingCalculatorScreenshot.png" alt="Bid Calculator Screenshot and Link" />
+                  </a>
+                </div>
+                <div class="projectLinks">
+                  <a href="https://github.com/JustSteve2k/BidCalculator" aria-label="Link to Github for Bid Calculator.">
+                    <span class="iconify" data-icon="radix-icons:github-logo"></span>
+                  </a>
+                  <a href="https://bid-calculator-f20ff.web.app" aria-label="Link to live demo for bid calculator.">
+                    <span class="iconify" data-icon="material-symbols:live-tv"></span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- About Me Section -->
-    <section>
-      <div id="aboutMe" class="section aboutMe">
-        <div class="leftBackground"></div>
-        <div class="midBackground">
-          <h2 class="sectionTitle">About Me</h2>
-          <p class="sectionSubTitle blue">My Story</p>
-          <div class="aboutMeBox">
-            <p>I have worked in the medical architecture field for 14 years and am now changing gears to work in web & software development.</p>
-            <p>I have always had an interest in tech even when working in the construction / architecture industry.</p>
-            <p>Included with that is over 10+ years of experience working with various clients to discuss and realize ideas into real life applications.</p>
-            <p>I enjoy automation and the challenge of breaking apart the overall process into individual steps .</p>
-            <br />
-            <p class="blue indent">My Education</p>
-            <p>University of Houston - 2008</p>
-            <p>Bachelors of Architecture</p>
-            <p>Bachelors of Environ. Design</p>
-          </div>
-        </div>
-        <div class="rightBackground">
-          <h2>Relevant Technologies</h2>
-          <div class="techBackground">
-            <div class="techBox">
-              <div class="iconContainer">
-                <span class="iconify htmlIcon" data-icon="akar-icons:html-fill" title-attribute="html"></span>
-                <div>HTML</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:css-fill"></span>
-                <div>CSS</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:sass-fill"></span>
-                <div>Sass</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="bxl:tailwind-css"></span>
-                <div>Tailwind</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:javascript-fill"></span>
-                <div>Javascript</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:react-fill"></span>
-                <div>React</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="bxl:nodejs"></span>
-                <div>Node JS</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="bxl:mongodb"></span>
-                <div>MongoDB</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="teenyicons:c-sharp-outline"></span>
-                <div>C#</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:python-fill"></span>
-                <div>Python</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:github-fill"></span>
-                <div>Github</div>
-              </div>
-              <div class="iconContainer">
-                <span class="iconify" data-icon="akar-icons:figma-fill"></span>
-                <div>Figma</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section>
-      <div id="contact" class="section contact">
-        <h2 class="sectionTitle">Contact Me</h2>
-        <p class="sectionSubTitle blue">Add your Info</p>
-        <div class="contactMainBox">
-          <div class="leftBox">
-            <div class="leftBoxText">
-              <h2>Lets Chat!</h2>
+      <!-- About Me Section -->
+      <section>
+        <div id="aboutMe" class="section aboutMe">
+          <div class="leftBackground"></div>
+          <div class="midBackground">
+            <h2 class="sectionTitle">About Me</h2>
+            <p class="sectionSubTitle blue">My Story</p>
+            <div class="aboutMeBox">
+              <p>I have worked in the medical architecture field for 14 years and am now changing gears to work in web & software development.</p>
+              <p>I have always had an interest in tech even when working in the construction / architecture industry.</p>
+              <p>Included with that is over 10+ years of experience working with various clients to discuss and realize ideas into real life applications.</p>
+              <p>I enjoy automation and the challenge of breaking apart the overall process into individual steps .</p>
               <br />
-              <p>Let me know if you have any questions, comments or just want to say hi!</p>
+              <p class="blue indent">My Education</p>
+              <p>University of Houston - 2008</p>
+              <p>Bachelors of Architecture</p>
+              <p>Bachelors of Environ. Design</p>
             </div>
           </div>
-          <div class="formBox">
-            <form action="https://formsubmit.co/8bf891bccfa1b0f1d044cb7aa75b2e6a" method="POST" target="_blank">
-              <label for="name">Name</label>
-              <input id="formName" name="name" type="text" placeholder="Your Name" required />
-              <label for="email">Email</label>
-              <input id="formEmail" name="email" type="text" placeholder="yourEmail@email.com" required />
-              <label for="message">Message</label>
-              <textarea id="formMessage" name="message" placeholder="Hows it going?" required></textarea>
-              <input type="text" name="_honey" style="display: none" />
-              <input type="hidden" name="_captcha" value="false" />
-              <button id="btnSubmit" type="submit">Submit</button>
-              <button id="btnClear" type="button">Clear</button>
-            </form>
+          <div class="rightBackground">
+            <h2>Relevant Technologies</h2>
+            <div class="techBackground">
+              <div class="techBox">
+                <div class="iconContainer">
+                  <span class="iconify htmlIcon" data-icon="akar-icons:html-fill" title-attribute="html"></span>
+                  <div>HTML</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:css-fill"></span>
+                  <div>CSS</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:sass-fill"></span>
+                  <div>Sass</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="bxl:tailwind-css"></span>
+                  <div>Tailwind</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:javascript-fill"></span>
+                  <div>Javascript</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:react-fill"></span>
+                  <div>React</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="bxl:nodejs"></span>
+                  <div>Node JS</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="bxl:mongodb"></span>
+                  <div>MongoDB</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="teenyicons:c-sharp-outline"></span>
+                  <div>C#</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:python-fill"></span>
+                  <div>Python</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:github-fill"></span>
+                  <div>Github</div>
+                </div>
+                <div class="iconContainer">
+                  <span class="iconify" data-icon="akar-icons:figma-fill"></span>
+                  <div>Figma</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
+      <!-- Contact Section -->
+      <section>
+        <div id="contact" class="section contact">
+          <h2 class="sectionTitle">Contact Me</h2>
+          <p class="sectionSubTitle blue">Add your Info</p>
+          <div class="contactMainBox">
+            <div class="leftBox">
+              <div class="leftBoxText">
+                <h2>Lets Chat!</h2>
+                <br />
+                <p>Let me know if you have any questions, comments or just want to say hi!</p>
+              </div>
+            </div>
+            <div class="formBox">
+              <form action="https://formsubmit.co/8bf891bccfa1b0f1d044cb7aa75b2e6a" method="POST" target="_blank">
+                <label for="name">Name</label>
+                <input id="formName" name="name" type="text" placeholder="Your Name" required />
+                <label for="email">Email</label>
+                <input id="formEmail" name="email" type="text" placeholder="yourEmail@email.com" required />
+                <label for="message">Message</label>
+                <textarea id="formMessage" name="message" placeholder="Hows it going?" required></textarea>
+                <input type="text" name="_honey" style="display: none" />
+                <input type="hidden" name="_captcha" value="false" />
+                <button id="btnSubmit" type="submit">Submit</button>
+                <button id="btnClear" type="button">Clear</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
